--- a/Rainmaker/Rainmaker/Storyboards/Notifications.storyboard
+++ b/Rainmaker/Rainmaker/Storyboards/Notifications.storyboard
@@ -10,17 +10,65 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Notifications View Controller-->
+        <!--Notifications-->
         <scene sceneID="Nsg-9k-yH2">
             <objects>
                 <viewController id="yUQ-IZ-V6h" customClass="NotificationsViewController" customModule="Rainmaker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cx3-BD-jE6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.35777854920000002" green="0.72812825439999995" blue="0.55316621070000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="j1h-e6-cYr">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="notificationsCell" id="T2k-qH-PLc" customClass="NotificationsTableViewCell" customModule="Rainmaker" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="T2k-qH-PLc" id="oWP-88-0pf">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avJ-pf-v4a">
+                                                    <rect key="frame" x="15" y="11" width="293" height="58"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CjP-rn-xAW">
+                                                    <rect key="frame" x="316" y="11" width="44" height="58"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" image="Leaderboards">
+                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="expandButtonPressed:" destination="T2k-qH-PLc" eventType="touchUpInside" id="2AT-OB-3do"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="expandButton" destination="CjP-rn-xAW" id="hBd-qL-gv5"/>
+                                            <outlet property="notificationLabel" destination="avJ-pf-v4a" id="a8C-Nx-3Zd"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="bgI-Ye-SHe" firstAttribute="trailing" secondItem="j1h-e6-cYr" secondAttribute="trailing" id="5PM-Ij-gmT"/>
+                            <constraint firstItem="j1h-e6-cYr" firstAttribute="leading" secondItem="bgI-Ye-SHe" secondAttribute="leading" id="Sbk-ZF-NNu"/>
+                            <constraint firstItem="j1h-e6-cYr" firstAttribute="top" secondItem="bgI-Ye-SHe" secondAttribute="top" id="g4F-eR-Eie"/>
+                            <constraint firstItem="bgI-Ye-SHe" firstAttribute="bottom" secondItem="j1h-e6-cYr" secondAttribute="bottom" id="zQj-Sb-bUO"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="bgI-Ye-SHe"/>
                     </view>
-                    <navigationItem key="navigationItem" id="6Pe-Ra-jMh"/>
+                    <navigationItem key="navigationItem" title="Notifications" id="6Pe-Ra-jMh"/>
+                    <connections>
+                        <outlet property="tableView" destination="j1h-e6-cYr" id="F8f-aC-BPp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s23-QV-OUb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -36,6 +84,13 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Fra-8q-9V0">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.4941176471" green="0.83137254900000002" blue="0.68235294120000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" red="0.4941176471" green="0.83137254900000002" blue="0.68235294120000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.35777854920000002" green="0.72812825439999995" blue="0.55316621070000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -48,6 +103,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Leaderboards" width="30" height="30"/>
         <image name="bell" width="30" height="30"/>
     </resources>
 </document>
