--- a/Rainmaker/Rainmaker/Storyboards/Search.storyboard
+++ b/Rainmaker/Rainmaker/Storyboards/Search.storyboard
@@ -53,7 +53,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="141" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PBX-yW-8Bg">
-                                <rect key="frame" x="0.0" y="194" width="375" height="584"/>
+                                <rect key="frame" x="0.0" y="234" width="375" height="544"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="searchViewCell" rowHeight="141" id="6cf-i8-2fk" customClass="SearchTableViewCell" customModule="Rainmaker" customModuleProvider="target">
@@ -179,7 +179,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gpm-rX-TqX">
-                                <rect key="frame" x="0.0" y="98" width="187.66666666666666" height="40"/>
+                                <rect key="frame" x="0.0" y="138" width="187.66666666666666" height="40"/>
                                 <color key="backgroundColor" red="0.4941176471" green="0.83137254900000002" blue="0.68235294120000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                 <state key="normal" title="Bets">
@@ -190,7 +190,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xRY-dS-lGx">
-                                <rect key="frame" x="187.66666666666663" y="98" width="187.33333333333337" height="40"/>
+                                <rect key="frame" x="187.66666666666663" y="138" width="187.33333333333337" height="40"/>
                                 <color key="backgroundColor" red="0.86515177539999999" green="0.86515177539999999" blue="0.86515177539999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                 <state key="normal" title="Users">
@@ -201,23 +201,32 @@
                                 </connections>
                             </button>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="uQ7-D5-fSK">
-                                <rect key="frame" x="0.0" y="138" width="375" height="56"/>
+                                <rect key="frame" x="0.0" y="178" width="375" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search for a specific bet!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JfE-Rt-WzX">
+                                <rect key="frame" x="16" y="104" width="343" height="24"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Gpm-rX-TqX" firstAttribute="top" secondItem="NEk-hp-vR0" secondAttribute="top" constant="10" id="4Tg-AD-d9K"/>
+                            <constraint firstItem="Gpm-rX-TqX" firstAttribute="top" secondItem="NEk-hp-vR0" secondAttribute="top" constant="50" id="4Tg-AD-d9K"/>
+                            <constraint firstItem="JfE-Rt-WzX" firstAttribute="top" secondItem="NEk-hp-vR0" secondAttribute="top" constant="16" id="50D-3c-Wnp"/>
                             <constraint firstItem="xRY-dS-lGx" firstAttribute="leading" secondItem="Gpm-rX-TqX" secondAttribute="trailing" id="9Rd-Aj-pP0"/>
                             <constraint firstItem="NEk-hp-vR0" firstAttribute="trailing" secondItem="uQ7-D5-fSK" secondAttribute="trailing" id="JXW-pf-GII"/>
                             <constraint firstItem="NEk-hp-vR0" firstAttribute="trailing" secondItem="xRY-dS-lGx" secondAttribute="trailing" id="M8u-5b-psn"/>
                             <constraint firstItem="Gpm-rX-TqX" firstAttribute="leading" secondItem="NEk-hp-vR0" secondAttribute="leading" id="MSr-9f-jm2"/>
                             <constraint firstItem="NEk-hp-vR0" firstAttribute="trailing" secondItem="PBX-yW-8Bg" secondAttribute="trailing" id="PZO-V2-uuc"/>
+                            <constraint firstItem="NEk-hp-vR0" firstAttribute="trailing" secondItem="JfE-Rt-WzX" secondAttribute="trailing" constant="16" id="REx-ib-nHc"/>
+                            <constraint firstItem="JfE-Rt-WzX" firstAttribute="leading" secondItem="NEk-hp-vR0" secondAttribute="leading" constant="16" id="V1p-lP-bvo"/>
                             <constraint firstItem="PBX-yW-8Bg" firstAttribute="top" secondItem="uQ7-D5-fSK" secondAttribute="bottom" id="ZPL-gq-4st"/>
                             <constraint firstItem="Gpm-rX-TqX" firstAttribute="width" secondItem="xRY-dS-lGx" secondAttribute="width" id="Zud-Fw-ruP"/>
                             <constraint firstItem="NEk-hp-vR0" firstAttribute="bottom" secondItem="PBX-yW-8Bg" secondAttribute="bottom" id="fj6-K3-hDF"/>
                             <constraint firstItem="uQ7-D5-fSK" firstAttribute="top" secondItem="Gpm-rX-TqX" secondAttribute="bottom" id="hXV-o4-npQ"/>
-                            <constraint firstItem="xRY-dS-lGx" firstAttribute="top" secondItem="NEk-hp-vR0" secondAttribute="top" constant="10" id="khf-pi-F8q"/>
+                            <constraint firstItem="xRY-dS-lGx" firstAttribute="top" secondItem="NEk-hp-vR0" secondAttribute="top" constant="50" id="khf-pi-F8q"/>
                             <constraint firstItem="PBX-yW-8Bg" firstAttribute="leading" secondItem="NEk-hp-vR0" secondAttribute="leading" id="kzI-cL-18X"/>
                             <constraint firstItem="uQ7-D5-fSK" firstAttribute="leading" secondItem="NEk-hp-vR0" secondAttribute="leading" id="qDy-mm-VNy"/>
                         </constraints>
@@ -235,6 +244,7 @@
                         <outlet property="betsButton" destination="Gpm-rX-TqX" id="SeI-gO-kpe"/>
                         <outlet property="searchBar" destination="uQ7-D5-fSK" id="Qx8-6n-y6k"/>
                         <outlet property="tableView" destination="PBX-yW-8Bg" id="FEO-zS-HvX"/>
+                        <outlet property="topLabel" destination="JfE-Rt-WzX" id="ouX-2l-KCx"/>
                         <outlet property="usersButton" destination="xRY-dS-lGx" id="atU-ox-wl2"/>
                     </connections>
                 </viewController>
